--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "license": "MIT",
   "dependencies": {
     "@testing-library/cypress": "^8.0.1",
-    "cypress": "^8.6.0",
+    "cypress": "latest",
     "dotenv": "^10.0.0"
+  },
+  "scripts": {
+    "cy:start": "cypress open",
+    "cy:run": "cypress run"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.2"
   }
 }
